themes/openy_themes/openy_rose/css/styles.css
/* ... */
.navbar-toggle {
  border: none;
  margin-bottom: 13px;
  margin-top: 13px;
  padding: 9px 6px;
}

.navbar-default .navbar-toggle,
.navbar-default .navbar-toggle:focus,
.navbar-default .navbar-toggle:hover,
.navbar-default .navbar-toggle:active {
  background-color: #0089d0;
  cursor: pointer;
}
.navbar-default .navbar-toggle .icon-bar,
.navbar-default .navbar-toggle:focus .icon-bar,
.navbar-default .navbar-toggle:hover .icon-bar,
.navbar-default .navbar-toggle:active .icon-bar {
  background-color: #fff;
}

.navbar-toggle .icon-bar {
  border-radius: 1px;
  display: block;
  height: 5px;
  width: 31px;
}

.navbar-toggle .icon-bar + .icon-bar {
  margin-top: 5px;
}

.viewport .nav-global > .container > .row {
  height: 100px;
  position: relative;
}
.viewport .nav-global > .container > .row .header-content {
  bottom: 0;
  position: absolute;
}
.viewport .header-content .page-head__search {
  bottom: 1px;
  position: absolute;
  width: 100%;
}

.toolbar-fixed.toolbar-horizontal .viewport,
.toolbar-fixed.toolbar-horizontal .top-navs {
  margin-top: 39px;
}
.toolbar-fixed.toolbar-horizontal.toolbar-tray-open .viewport,
.toolbar-fixed.toolbar-horizontal.toolbar-tray-open .top-navs {
  margin-top: 79px;
}
.toolbar-fixed.toolbar-vertical .viewport,
.toolbar-fixed.toolbar-vertical .top-navs {
  margin-top: 39px;
}
.toolbar-fixed.toolbar-vertical .viewport.affix,
.toolbar-fixed.toolbar-vertical .top-navs.affix {
  margin-top: 39px;
}
.toolbar-fixed.toolbar-vertical .sidebar {
  top: 109px;
}
.toolbar-fixed.toolbar-vertical.toolbar-tray-open .viewport .top-navs {
  margin-left: 15rem;
}

.toolbar-vertical .top-navs {
  margin-top: 39px;
}
.toolbar-vertical .top-navs.affix {
  margin-top: 0px;
}
.toolbar-vertical .viewport {
  margin-top: 39px;
}
.toolbar-vertical .sidebar {
  top: 109px;
}
.toolbar-vertical.toolbar-tray-open .top-navs {
  margin-left: 150px;
}

.nav.dropdown-menu {
  background-color: #0060af;
  border: 1px solid #fff;
}

.nav-home li.dropdown {
  position: static;
  visibility: inherit;
}
.nav-home .dropdown-menu {
  position: absolute;
  bottom: auto;
  overflow: auto;
  top: auto;
}

.sidebar {
  position: fixed;
  top: 70px;
  bottom: 0;
  z-index: 40;
  display: block !important;
  visibility: visible;
  overflow: hidden;
  overflow-x: hidden;
  overflow-y: auto;
  padding-right: inherit;
  height: auto;
  background: #0089d0;
  -webkit-overflow-scrolling: touch;
}
.sidebar.collapse {
  width: 0 !important;
}
.sidebar.collapse.in {
  width: 100% !important;
}
.sidebar.collapsing-out {
  -webkit-transition: visibility 0s .4s linear;
  -moz-transition: visibility 0s .4s linear;
  -ms-transition: visibility 0s .4s linear;
}
.sidebar .search-form-wrapper {
  padding-bottom: 10px;
  padding-top: 10px;
}
.sidebar .search-form-wrapper input[type="search"]:-moz-placeholder {
  font-size: 18px;
}
.sidebar .search-form-wrapper input[type="search"]::-moz-placeholder {
  font-size: 18px;
}
.sidebar .search-form-wrapper input[type="search"]:-ms-input-placeholder {
  font-size: 18px;
}
.sidebar .search-form-wrapper input[type="search"]::-webkit-input-placeholder {
  font-size: 18px;
}
.sidebar .caret {
  margin-left: 7px;
}
.sidebar .dropdown-menu {
  position: relative;
  top: 0;
  z-index: 0;
  display: block;
  float: none;
  margin: 0;
  padding: 0;
  border: 0;
  border-radius: 0;
  background: none;
  box-shadow: none;
  background-color: #0089d0;
}
.sidebar .active > a {
  -webkit-transition: height .3s .3s ease-out,opacity .3s 0s ease-out,background-color .2s .6s ease-out,color .2s .6s ease-out,color .2s .6s ease-out,border-color 0s ease-out;
  -moz-transition: height .3s .3s ease-out,opacity .3s 0s ease-out,background-color .2s .6s ease-out,color .2s .6s ease-out,color .2s .6s ease-out,border-color 0s ease-out;
  -ms-transition: height .3s .3s ease-out,opacity .3s 0s ease-out,background-color .2s .6s ease-out,color .2s .6s ease-out,color .2s .6s ease-out,border-color 0s ease-out;
}
.sidebar .nav a {
  overflow: hidden;
  padding: 0 15px;
  text-overflow: ellipsis;
  line-height: 20px;
  cursor: pointer;
  -webkit-transition: height .3s 0s ease-out,opacity .3s 0s ease-out;
  -moz-transition: height .3s 0s ease-out,opacity .3s 0s ease-out;
  -ms-transition: height .3s 0s ease-out,opacity .3s 0s ease-out;
  -o-transition: height .3s 0s ease-out,opacity .3s 0s ease-out;
  transition: height .3s 0s ease-out,opacity .3s 0s ease-out;
}
.sidebar .nav-level-2 .row-level-2 {
  display: none;
}
.sidebar .nav-level-2.open .row-level-2 {
  display: block;
  border-bottom: 1px solid #979797;
}
.sidebar .nav-stacked > li {
  margin: 0;
}
.sidebar .nav-stacked > li + li {
  margin: 0;
}
.sidebar .page-head__main-menu {
  padding-top: 9px;
}
.sidebar .page-head__top-menu {
  overflow: visible;
  padding-bottom: 5px;
  padding-top: 5px;
}
.sidebar .page-head__top-menu li a {
  padding-top: 10px;
  padding-bottom: 10px;
}
.sidebar .row-level-3 {
  display: none;
}
.sidebar input[type="submit"] {
  display: none;
}
.sidebar .navbar-nav {
  margin: 0 -15px;
}
.sidebar .nav-level-2 a {
  padding-top: 12px;
  padding-bottom: 12px;
}
.sidebar .nav-level-2.open,
.sidebar .row-level-2 {
  background-color: #0060af;
}
.sidebar .navbar-nav .open .dropdown-menu > li > a,
.sidebar .navbar-nav .open .dropdown-menu .dropdown-header {
  padding: 12px 15px 12px 23px;
}
.sidebar .dropdown-menu > li > a:hover,
.sidebar .dropdown-menu > li > a:focus {
  background: none;
}
.sidebar .section-icon {
  display: none;
}

@media (min-width: 75em) {
  .viewport .page-head__top-menu {
    padding-right: 15px;
  }
}
.viewport .page-head__main-menu .nav-level-2 > a:hover,
.viewport .page-head__main-menu .nav-level-2 > a:focus {
  text-decoration: none;
}
.viewport .page-head__main-menu .dropdown-menu > li > a:focus,
.viewport .page-head__main-menu .dropdown-menu > li > a:hover {
  background: none;
}
.viewport .page-head__main-menu .nav-level-3 {
  padding-top: 25px;
}
/* ... */

